--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "type":"module",
   "main": "app.js",
   "scripts": {
-    "start":"node app.js"
+    "start":"node app1.js"
   },
   "keywords": [],
   "author": "",
